Bug 487469 - Field shows 0 to 100% when it's actually -100 to 100% for Fuzzy Stroke in Brush editor
Summary: Field shows 0 to 100% when it's actually -100 to 100% for Fuzzy Stroke in Bru...
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Brush engines (other bugs)
Version First Reported In: 5.2.2
Platform: Microsoft Windows Microsoft Windows
: NOR normal
Target Milestone: ---
Assignee: Dmitry Kazakov
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2024-05-24 10:59 UTC by alastair
Modified: 2024-10-22 12:58 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Illustration of where bug is (62.06 KB, image/png)
2024-05-24 10:59 UTC, alastair
Details

Note You need to log in before you can comment on or make changes to this bug.
Description alastair 2024-05-24 10:59:34 UTC
Created attachment 169765 [details]
Illustration of where bug is

***
If you're not sure this is actually a bug, instead post about it at https://discuss.kde.org

If you're reporting a crash, attach a backtrace with debug symbols; see https://community.kde.org/Guidelines_and_HOWTOs/Debugging/How_to_create_useful_crash_reports
***

SUMMARY

(See attached image.)

In Brush editor, I went to adjust saturation and hue, with the "Fuzzy stroke".

When adjusting the minimum and maximum percentage on the graph, it correctly says that the range is between -100% and 100%.

But when dragging the point on the graph it displays a value between 0 and 100, when it should be showing it from -100 to 100.


STEPS TO REPRODUCE
1. In brush editor's enable brush settings window, click "Fuzzy Stroke"
2. In the graph, move the left point up and down
3. look at the value % change

OBSERVED RESULT

Goes between 0 and 100%

EXPECTED RESULT

-100 to 100%

SOFTWARE/OS VERSIONS
Windows: 10
macOS: 
Linux/KDE Plasma: 
(available in About System)
KDE Plasma Version: 
KDE Frameworks Version: 
Qt Version: 

ADDITIONAL INFORMATION
Comment 1 Halla Rempt 2024-07-27 09:18:01 UTC
It certainly is confusing, and if it should be presented like this, it needs a tooltip and an explanation in the manual.
Comment 2 Dmitry Kazakov 2024-10-22 12:58:17 UTC
Git commit da166935de2c68b0ae6ae79b92c9c17c31ba7420 by Dmitry Kazakov.
Committed on 22/10/2024 at 12:58.
Pushed by dkazakov into branch 'master'.

[string freeze exception] Fix range of Saturation and Value brush options

The patch fixes the label in the curve widget that shows the range of
Value and Saturation options. The patch implements two changes:

1) Fix scaling of the curve points from 0...100 to -100...100 as written
   in the labels

2) Fix the label that (incorrectly) tells that 50% is the "neutral" value.
   The actual "neutral" value is 0%.
CC:kimageshop@kde.org
CC:kde-i18n-doc@kde.org

M  +8    -6    plugins/paintops/libpaintop/KisStandardOptionData.cpp

https://invent.kde.org/graphics/krita/-/commit/da166935de2c68b0ae6ae79b92c9c17c31ba7420
Comment 3 Dmitry Kazakov 2024-10-22 12:58:31 UTC
Git commit d069b7b0f9ccb40825ba7eabad1d1c65af91e641 by Dmitry Kazakov.
Committed on 22/10/2024 at 12:58.
Pushed by dkazakov into branch 'krita/5.2'.

[string freeze exception] Fix range of Saturation and Value brush options

The patch fixes the label in the curve widget that shows the range of
Value and Saturation options. The patch implements two changes:

1) Fix scaling of the curve points from 0...100 to -100...100 as written
   in the labels

2) Fix the label that (incorrectly) tells that 50% is the "neutral" value.
   The actual "neutral" value is 0%.
CC:kimageshop@kde.org
CC:kde-i18n-doc@kde.org

M  +8    -6    plugins/paintops/libpaintop/KisStandardOptionData.cpp

https://invent.kde.org/graphics/krita/-/commit/d069b7b0f9ccb40825ba7eabad1d1c65af91e641