[string freeze exception] Fix range of Saturation and Value brush options

The patch fixes the label in the curve widget that shows the range of
Value and Saturation options. The patch implements two changes:

1) Fix scaling of the curve points from 0...100 to -100...100 as written
   in the labels

2) Fix the label that (incorrectly) tells that 50% is the "neutral" value.
   The actual "neutral" value is 0%.

BUG:487469
CC:kimageshop@kde.org
CC:kde-i18n-doc@kde.org